# ResumeBuilder

./: .gitignore  README.md  SKILL.md  main.py  plan.md  pyproject.toml  sample_content.json  sample_content.yaml
resumebuilder/: __init__.py  __main__.py  cli.py  draw.py  fit.py  measure.py  pipeline.py  schema.py  template.py  text.py
resumebuilder/renderer/: compiler.py  typst_renderer.py
resumebuilder/renderer/resumebuilder_typst/: lib.typ  typst.toml
resumebuilder/renderer/templates/typst/: Header.j2.typ  Preamble.j2.typ  SectionBeginning.j2.typ  SectionEnding.j2.typ
resumebuilder/renderer/templates/typst/entries/: BulletEntry.j2.typ  EducationEntry.j2.typ  ExperienceEntry.j2.typ  NormalEntry.j2.typ  OneLineEntry.j2.typ
resumebuilder/schema/: __init__.py  models.py
tests/: conftest.py  test_fit.py  test_measure.py  test_pipeline.py  test_schema.py  test_text.py
