[project]
name = "resumebuilder"
version = "0.2.0"
description = "Typst-based resume PDF renderer — YAML in, pixel-perfect PDF out"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "typst>=0.14.8",           # Typst Python bindings → PDF compilation
    "rendercv-fonts>=0.5.1",   # Bundled fonts (Source Sans 3, Latin Modern, etc.) for Typst
    "Jinja2>=3.1.6",           # Template engine → generate .typ files
    "pydantic[email]>=2.12.5", # Content schema validation
    "ruamel.yaml>=0.19.1",     # YAML parsing with line-info preservation for error messages
]

[dependency-groups]
dev = [
    "pytest>=8.3",        # Unit tests
    "pytest-cov>=5.0",   # Coverage
    "ruff>=0.6",          # Lint + format
]

[project.scripts]
resume-builder = "resumebuilder.cli:main"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra"
